# us4-v6-simplicio-apple

./: CMakeLists.txt  bootstrap.ps1  bootstrap.sh  package-lock.json  package.json
.specs/sprints/: BACKLOG.md
.specs/sprints/sprint-03/: SPRINT.md
.specs/sprints/sprint-04/: SPRINT.md
.specs/sprints/sprint-05/: T05.6-lowbit-loader.task.md
.specs/sprints/sprint-07/: SPRINT.md  T07.5-llama-loader.task.md
apps/cli/: main.cpp
runtime/: CMakeLists.txt  README.md
runtime/adapters/: dense_adapter_base.cpp  dense_adapter_base.h
runtime/adapters/llama/: llama_adapter.cpp
runtime/benchmarks/: CMakeLists.txt  dense_baseline.cpp
runtime/core/: ius4v6_adapter.h  model_asset.cpp  runtime_context.cpp  runtime_context.h  tensor.cpp  tensor.h
runtime/memory/: unified_allocator.cpp  unified_allocator.h
runtime/metal/: README.md  command_queue.cpp  command_queue.h
runtime/mlx/: README.md  mlx_bridge.cpp  mlx_bridge.h
runtime/neon/: README.md  kernel_profile.cpp  kernel_profile.h  neon_matmul.cpp
tests/e2e/: us4-cli.spec.ts
tests/fixtures/models/bitnet-b1.58-2b/: tokenizer.json
tests/fixtures/models/llama-3.1-8b/: tokenizer.json
tests/fixtures/models/pt-bitnet-ternary-2b/: tokenizer.json
tests/unit/: CMakeLists.txt  model_asset_contract_test.cpp  neon_contract_test.cpp  runtime_acceleration_contract_test.cpp  runtime_contract_runner.cpp  runtime_smoke_test.cpp
